<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".verification.VerificationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSecondary"
        android:elevation="@dimen/padding_4">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:includeFontPadding="false"
            android:text="@string/verification"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_18" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_ticket"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@id/toolbar"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16">

        <com.vipulasri.ticketview.TicketView
            android:id="@+id/ticketView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ticketBackgroundColor="?colorSecondary"
            app:ticketCornerRadius="@dimen/radius_10"
            app:ticketCornerType="rounded"
            app:ticketDividerColor="?android:colorBackground"
            app:ticketDividerPadding="0dp"
            app:ticketDividerType="dash"
            app:ticketOrientation="horizontal"
            app:ticketScallopPositionPercent="35"
            app:ticketScallopRadius="15dp"
            app:ticketShowBorder="false"
            app:ticketShowDivider="true" />

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="65dp"
            android:alpha="0.1"
            android:src="@drawable/guitar_full"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_allowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:includeFontPadding="false"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/text_size_36"
            android:textStyle="bold"
            tools:text="@string/dummy_allowed" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="130dp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="?colorOnPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/dummy_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="@dimen/margin_8"
            android:includeFontPadding="false"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            tools:text="@string/dummy_email" />

        <TextView
            android:id="@+id/tv_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="@dimen/margin_4"
            android:includeFontPadding="false"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            tools:text="@string/dummy_roll" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_ticket"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginVertical="@dimen/margin_24"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/iv_remove"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_round_remove_circle_outline_24"
            app:tint="?colorOnPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="?colorOnPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="3" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_round_add_circle_outline_24"
            app:tint="?colorOnPrimary"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_count"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="@dimen/margin_24"
        android:background="@drawable/bg_rounded_primary"
        android:backgroundTint="@color/purple_900"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/padding_16"
        android:paddingVertical="@dimen/padding_8"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="?colorOnPrimary"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="?colorOnPrimary" />

</RelativeLayout>