<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <RelativeLayout
        android:id="@+id/rl_ticket"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="gone">

        <com.vipulasri.ticketview.TicketView
            android:id="@+id/ticketView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ticketBackgroundColor="?colorSecondary"
            app:ticketCornerRadius="@dimen/radius_10"
            app:ticketCornerType="rounded"
            app:ticketDividerColor="?android:colorBackground"
            app:ticketDividerPadding="0dp"
            app:ticketDividerType="dash"
            app:ticketOrientation="horizontal"
            app:ticketScallopPositionPercent="35"
            app:ticketScallopRadius="15dp"
            app:ticketShowBorder="false"
            app:ticketShowDivider="true" />

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="65dp"
            android:alpha="0.1"
            android:src="@drawable/guitar_full"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/btn_resend_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_rounded_primary"
            android:backgroundTint="@color/purple_900"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/padding_16"
            android:paddingVertical="@dimen/padding_8"
            android:text="@string/resend_email"
            android:textAllCaps="true"
            android:textColor="?colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="130dp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="?colorOnPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/dummy_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="@dimen/margin_8"
            android:includeFontPadding="false"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            tools:text="@string/dummy_email" />

        <TextView
            android:id="@+id/tv_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="@dimen/margin_4"
            android:includeFontPadding="false"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            tools:text="@string/dummy_roll" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="?colorOnPrimary"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_empty"
        layout="@layout/layout_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>